refactor ipc mechanism (all tests still pass)

--- a/Makefile.build
+++ b/Makefile.build
@@ -60,6 +60,7 @@ userprog_SRC += userprog/exception.c	# User exception handler.
 userprog_SRC += userprog/syscall.c	# System call handler.
 userprog_SRC += userprog/gdt.c		# GDT initialization.
 userprog_SRC += userprog/tss.c		# TSS management.
+userprog_SRC += userprog/ipc.c		# IPC management.
 
 # No virtual memory code yet.
 #vm_SRC = vm/file.c			# Some file.
