--- a/Makefile.build
+++ b/Makefile.build
@@ -63,7 +63,7 @@ userprog_SRC += userprog/tss.c		# TSS management.
 userprog_SRC += userprog/ipc.c		# IPC management.
 
 # No virtual memory code yet.
-#vm_SRC = vm/file.c			# Some file.
+vm_SRC = vm/page.c
 
 # Filesystem code.
 filesys_SRC  = filesys/filesys.c	# Filesystem core.
