--- a/Makefile.build
+++ b/Makefile.build
@@ -62,7 +62,7 @@ userprog_SRC += userprog/gdt.c		# GDT initialization.
 userprog_SRC += userprog/tss.c		# TSS management.
 userprog_SRC += userprog/ipc.c		# IPC management.
 
-# No virtual memory code yet.
+# virtual memory code.
 vm_SRC = vm/page.c
 
 # Filesystem code.
